--- a/myfirstconsolerpg/myfirstconsolerpg.csproj
+++ b/myfirstconsolerpg/myfirstconsolerpg.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Battle.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
+    <Compile Include="Class3.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="player.cs" />
     <Compile Include="Program.cs" />
